--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 # ignoruj plik
-PackScape X Plane Scenery.md
+PackScapeX.md
 # ignoruj wszystkie pliki .pdf
-#*.pdf
+*.pdf
 # ignoruj pliki .ods
-#*.ods
+*.ods
 # ignoruj pliki .csv - narazie
-#*.csv
+*.csv
 # ignoruj pliki .py
 #*.py
 #ignoruj pliki .txt
 *.txt
 # ignoruj pliki .log
-#*.log
+*.log
 
 #ignoruj katalogi
 
